# fastapi-skeleton

./: .gitignore  Dockerfile  README.md  docker-compose.yml
ci/: Dockerfile
src/: .coveragerc  .env  .flake8  aerich.ini  alembic.ini  entrypoint.sh  gunicorn.conf.py  gunicorn.py  main.py  pyproject.toml  tasks.py
src/api/: health_check.py
src/core/: __init__.py  config.py  database.py  env_resolver.py  main.py  routes.py  settings.py  shutdown.py  startup.py
src/migrations/: env.py
src/migrations/models/: 0_20211015163347_init.sql  0_20211016164146_init.sql
src/migrations/versions/: 1687078781_eacb73c378a5_initial.py
src/models/: base_model.py  entity.py  user.py
src/requirements/: dev.txt  prod.txt
src/tests/: conftest.py  test_health_check.py  test_user_model.py
